--- a/Módulo 3/Web/styles/main.css
+++ b/Módulo 3/Web/styles/main.css
@@ -1,3 +1,7 @@
+/* Importar fuentes (Noto Sans, Fira Code) */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@5.2/distr/fira_code.css);
+
 /* El cuerpo, en otras palabras casi todo */
 body {
     background-color: #181a1b;
