Se usa monospace, no sans-serif

--- a/Módulo 3/Web/styles/main.css
+++ b/Módulo 3/Web/styles/main.css
@@ -16,7 +16,7 @@ a {
 
 /* Para cuando se quiera monospace */
 .mono {
-    font-family: 'Fira Code', 'Cascadia Code', 'Consolas', sans-serif;
+    font-family: 'Fira Code', 'Cascadia Code', 'Consolas', monospace;
 }
 
 /* El contenedor de flexbox */
